// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Input Container renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#c2c2c2",
        "borderRadius": 10,
        "borderWidth": 2,
        "marginVertical": 20,
        "width": "95%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 675,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize={true}
      onChangeText={[Function]}
      placeholder=""
      placeholderTextColor=""
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#00002a",
            "fontFamily": undefined,
            "fontSize": 32,
            "width": 562.5,
          },
          Object {
            "borderColor": "#24a790",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/icons/check.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Component Input Container renders with Secure text 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#c2c2c2",
        "borderRadius": 10,
        "borderWidth": 2,
        "marginVertical": 20,
        "width": "95%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 675,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize={true}
      onChangeText={[Function]}
      placeholder=""
      placeholderTextColor=""
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "color": "#00002a",
            "fontFamily": undefined,
            "fontSize": 32,
            "width": 562.5,
          },
          Object {
            "borderColor": "#24a790",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/icons/check.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Component Input Container renders with auto capitalize 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#c2c2c2",
        "borderRadius": 10,
        "borderWidth": 2,
        "marginVertical": 20,
        "width": "95%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 675,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize={true}
      onChangeText={[Function]}
      placeholder=""
      placeholderTextColor=""
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#00002a",
            "fontFamily": undefined,
            "fontSize": 32,
            "width": 562.5,
          },
          Object {
            "borderColor": "#24a790",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/icons/check.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
